# WP3-Self-Diagnosis-Toolkit

./: .gitignore  README.md
src/fault_detector/: package.xml  setup.cfg  setup.py
src/fault_detector/fault_detector/: fault_heatmap.py  gbdt_fault_detector.py  gbdt_fault_detector_metrics.py  lstm_fault_detector.py  lstm_fault_detector_metrics.py
src/fault_detector/launch/: lstm.launch.py
src/remora_controller/: CMakeLists.txt  package.xml
src/remora_controller/config/: joy_teleop.yaml
src/remora_controller/config/swarm/burger/: hardware_protection_layer.yaml  sensor_specification.yaml
src/remora_controller/config/swarm/burger/movement_pattern/basic/: adaptive_sampling_pattern.yaml  aggregation_pattern.yaml  dispersion_pattern.yaml  drive_pattern.yaml  minimalist_flocking_pattern.yaml  random_walk_pattern.yaml
src/remora_controller/include/remora_controller/: simple_controller.hpp
src/remora_controller/launch/: joystick_teleop.launch.py  swarm_controller.launch.py  tcp_endpoint.launch.py
src/remora_controller/src/: GoTo.cpp  SwarmAggregation.cpp  simple_controller.cpp  state_estimator.cpp
src/remora_interfaces/: CMakeLists.txt  package.xml
src/remora_interfaces/action/: AddNumbers.action  GoToPosition.action
src/remora_interfaces/msg/: GoalFeedback.msg  GoalResult.msg
src/remora_interfaces/srv/: SendGoal.srv
